--- a/_includes/before.html
+++ b/_includes/before.html
@@ -3,9 +3,34 @@
 <h1>before</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_before_code" data-timestamp="2016-04-26 16:02:49 -0600" class="brush: csharp;">using NSpec;
+<pre id="describe_before_code" data-timestamp="2016-04-26 16:08:28 -0600" class="brush: csharp;">using NSpec;
+class describe_before : nspec
+{
+    void they_run_before_each_example()
+    {
+        before = () =&gt; number = 1;
+        it[&quot;number should be 2&quot;] = () =&gt; (number = number + 1).should_be(2);
+        //even though it was incremented in the previous example
+        //the before runs again for each spec resetting it to 1
+        it[&quot;number should be 1&quot;] = () =&gt; number.should_be(1);
+    }
+    int number;
+}
+
+public static class describe_before_output
+{
+    public static string Output = @&quot;
+describe before
+  they run before each example
+    number should be 2
+    number should be 1
+
+2 Examples, 0 Failed, 0 Pending
+&quot;;
+    public static int ExitCode = 0;
+}
 </pre>
-<pre id="describe_before_output" data-timestamp="2016-04-26 16:02:49 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
+<pre id="describe_before_output" data-timestamp="2016-04-26 16:08:28 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
   they run before each example
     number should be 2
     number should be 1
