--- a/_includes/class_level.html
+++ b/_includes/class_level.html
@@ -3,9 +3,41 @@
 <h1>class level</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_class_level_code" data-timestamp="2016-04-26 16:02:50 -0600" class="brush: csharp;">﻿using NSpec;
+<pre id="describe_class_level_code" data-timestamp="2016-04-26 16:08:29 -0600" class="brush: csharp;">﻿using NSpec;
+class describe_class_level : nspec
+{
+    //before, act, and it can also be declared at the class level like so
+    void before_each()
+    {
+        sequence = &quot;arrange, &quot;;
+    }
+    void act_each()
+    {
+        sequence += &quot;act&quot;;
+    }
+
+    //prefixing a method with &quot;it_&quot; or &quot;specify_&quot;
+    //will tell nspec to treat the method as an example
+    void specify_given_befores_and_acts_run_in_the_correct_sequence()
+    {
+        sequence.should_be(&quot;arrange, act&quot;);
+    }
+
+    string sequence;
+}
+
+public static class describe_class_level_output
+{
+    public static string Output = @&quot;
+describe class level
+  specify given befores and acts run in the correct sequence
+
+1 Examples, 0 Failed, 0 Pending
+&quot;;
+    public static int ExitCode = 0;
+}
 </pre>
-<pre id="describe_class_level_output" data-timestamp="2016-04-26 16:02:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
+<pre id="describe_class_level_output" data-timestamp="2016-04-26 16:08:29 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
   specify given befores and acts run in the correct sequence
 
 1 Examples, 0 Failed, 0 Pending
