--- a/_includes/exception.html
+++ b/_includes/exception.html
@@ -3,10 +3,31 @@
 <h1>exception</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_exception_code" data-timestamp="2016-04-26 16:02:50 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_exception_code" data-timestamp="2016-04-26 16:08:30 -0600" class="brush: csharp;">﻿using System;
 using NSpec;
+class describe_exception : nspec
+{
+    void given_a_null_string()
+    {
+        it[&quot;should throw null-ref&quot;] =
+            expect&lt;NullReferenceException&gt;(() =&gt; nullString.Trim());
+    }
+    string nullString = null;
+}
+
+public static class describe_exception_output
+{
+    public static string Output = @&quot;
+describe exception
+  given a null string
+    should throw null-ref
+
+1 Examples, 0 Failed, 0 Pending
+&quot;;
+    public static int ExitCode = 0;
+}
 </pre>
-<pre id="describe_exception_output" data-timestamp="2016-04-26 16:02:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
+<pre id="describe_exception_output" data-timestamp="2016-04-26 16:08:30 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
   given a null string
     should throw null-ref
 
