--- a/_includes/my_first_spec.html
+++ b/_includes/my_first_spec.html
@@ -3,9 +3,28 @@
 <h1>my first spec</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="my_first_spec_code" data-timestamp="2016-04-26 16:02:52 -0600" class="brush: csharp;">﻿using NSpec;
+<pre id="my_first_spec_code" data-timestamp="2016-04-26 16:08:31 -0600" class="brush: csharp;">﻿using NSpec;
+class my_first_spec : nspec
+{
+    void given_the_world_has_not_come_to_an_end()
+    {
+        it[&quot;Hello World should be Hello World&quot;] = () =&gt; &quot;Hello World&quot;.should_be(&quot;Hello World&quot;);
+    }
+}
+
+public static class my_first_spec_output
+{
+    public static string Output = @&quot;
+my first spec
+  given the world has not come to an end
+    Hello World should be Hello World
+
+1 Examples, 0 Failed, 0 Pending
+&quot;;
+    public static int ExitCode = 0;
+}
 </pre>
-<pre id="my_first_spec_output" data-timestamp="2016-04-26 16:02:52 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
+<pre id="my_first_spec_output" data-timestamp="2016-04-26 16:08:31 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
   given the world has not come to an end
     Hello World should be Hello World
 
