--- a/_includes/pending.html
+++ b/_includes/pending.html
@@ -3,9 +3,31 @@
 <h1>pending</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_pending_code" data-timestamp="2016-04-26 16:02:51 -0600" class="brush: csharp;">using NSpec;
+<pre id="describe_pending_code" data-timestamp="2016-04-26 16:08:31 -0600" class="brush: csharp;">using NSpec;
+class describe_pending : nspec
+{
+    void when_creating_pending_specifications()
+    {
+        it[&quot;pending spec&quot;] = todo;
+        //or just add an 'x' at the beginning of a specification that isn't quite ready
+        xit[&quot;\&quot;\&quot; should be \&quot;something else\&quot;&quot;] = () =&gt; &quot;&quot;.should_be(&quot;something else&quot;);
+    }
+}
+
+public static class describe_pending_output
+{
+    public static string Output = @&quot;
+describe pending
+  when creating pending specifications
+    pending spec - PENDING
+    &quot;&quot;&quot;&quot; should be &quot;&quot;something else&quot;&quot; - PENDING
+
+2 Examples, 0 Failed, 2 Pending
+&quot;;
+    public static int ExitCode = 0;
+}
 </pre>
-<pre id="describe_pending_output" data-timestamp="2016-04-26 16:02:51 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
+<pre id="describe_pending_output" data-timestamp="2016-04-26 16:08:31 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
   when creating pending specifications
     pending spec - PENDING
     &quot;&quot; should be &quot;something else&quot; - PENDING
